           g_healthSpeedBottom. See docs for more info
* stephan: added g_weapons flag 2048: knife always gibs a dead player
* stephan: added g_damageBonus and g_damageBonusOpts. See docs for more info
* stephan: moved the promotion rewards from the client to the server, so that
           the server can check if players should really get promotions like
           adrena (requires etpubclient >= 20070819)
* tijmen:  added !gib -1|all, which gibs every player in the game
* tijmen:  added !panzer and !sniperwar, which was finished by Elf Friend
* tijmen:  added custom voicechats, made by Elf Friend
           command: g_customVoiceChats
* quad:    added GeoIP country flags in scoreboard, made by mcwf
           g_scoreboard_cf / cg_scoreboard_cf
* quad:    backstab works on wounded players (instant gib) by Elf
* quad:    added panzer/rifle/sniper war by Elf (was missing from the sources)
           also !panzer, !sniper, !riflewar, and !giba, !splat, !splata
* quad:    added a patch from redeye, with some fixes, greeting sound,
           some shrubbot commands, and others.
* quad:    g_noSkillUpgrades, and the changes yada made to the /ref system
           renamed g_scoreboard_cf to g_countryFlags (and cg_countryFlags too)
* quad:    added foxX's code for ready icon
* quad:    partial support for ETTV, also fix for Ticket #5
           fix for Ticket #10 by RedEye
* flms:    added g_spawnInvulFair by PCR
* drevil:  added support for Omni-bot 0.7
* flms:    allow negative shrubbot levels
* quad:    added more control over "energy" ( class weapon time ) via cvar
           g_chargeType
* flms:    added g_flushItems (NQ)
* flms:    mg's can make headshots
* flms:    you also hear hitsounds when Friendly Fire is off and g_reflectFriendlyFire is on
* flms:    mg's can reload midclip* quad:    Lua API for ETPub, aiming for compatibility with ETPro 
           http://wolfwiki.anime.net/index.php/Lua_Mod_API (TODO: Docs!)